# rsnip

./: .bumpversion.toml  .envrc  Development.md  LICENSE  Makefile  README.md
doc/: runbook.md
rsnip/: Cargo.toml  completion_source.txt  rsnip.alias.bash  rsnip.alias.bash.template  rsnip.bash
rsnip/src/: application.rs  complete.rs  config.rs  default_completions.txt  default_config.toml  domain.rs  fuzzy.rs  infrastructure.rs  lib.rs  lsp.rs  main.rs  path_utils.rs  template.rs
rsnip/src/application/: mod.rs  snippet_service.rs
rsnip/src/application/services/: completion.rs  management.rs  mod.rs  template.rs
rsnip/src/cli/: args.rs  commands.rs
rsnip/src/domain/: content.rs  errors.rs  mod.rs  parser.rs  snippet.rs  tochange.rs
rsnip/src/domain/template/: errors.rs  interface.rs  mod.rs  model.rs
rsnip/src/infrastructure/: clipboard.rs  complete.rs  edit_snippets.rs  fuzzy.rs  minijinja.rs  mod.rs  scls_parser.rs  tochange.rs
rsnip/src/infrastructure/parsers/: default.rs  mod.rs  scls.rs  vcode.rs
rsnip/src/util/: mod.rs  path_utils.rs  testing.rs
rsnip/tests/: application.rs  commands.rs  domain.rs  fuzzy.rs  infrastructure.rs  template.rs  template_shell.rs  test_commands.rs  test_fuzzy.rs  test_lib.rs  test_template.rs  test_template_shell.rs
rsnip/tests/application/: mod.rs  test_snippet_service.rs  test_tochange.rs
rsnip/tests/application/service/: completion_tests.rs  management_tests.rs  mod.rs  template_tests.rs
rsnip/tests/infrastructure/: mod.rs  test_minijinja.rs
rsnip/tests/infrastructure/parsers/: mod.rs  test_default.rs  test_scls.rs  test_vcode.rs
scripts/: x.py
(+1 files in other folders)
