[package]
name = "rsnip"
version = "0.5.5"
edition = "2021"
authors = ["sysid <sysid@gmx.de>"]
description = "A universal command-line snippet manager"
repository = "https://github.com/sysid/rsnip"
documentation = "https://docs.rs/rsnip"
keywords = ["snippet", "cli", "manager"]
categories = ["command-line-utilities"]
readme = "../README.md"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.15.0"
skim = "0.16.0"
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
once_cell = "1.20.2"
arboard = "3.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap_complete = "4.5.40"
serde = { version = "1.0.217", features = ["derive"] }
dirs = "5.0.1"
config = "0.15.4"
minijinja = "2.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.135"
assert_cmd = "2.0.16"
predicates = "3.1.3"
itertools = "0.14.0"
